--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,9 @@
 [metadata]
 description-file = README.md
+
+[tool:pytest]
+addopts=-v
+        -n 4
+        --durations=10
+        --cov-report term-missing
+        --cov=keraflow
